# embernet-tui

./: CMakeLists.txt  README.md  commit.txt  run_tests.sh
docs/: AGENTEN_ROADMAP.md  AGENTEN_ROADMAP_PHASE3.md  ROADMAP.md
src/: main.cpp
src/app/: App.cpp  App.hpp  InputBuffer.cpp  InputBuffer.hpp  SlashCommand.cpp  SlashCommand.hpp  TerminalModeGuard.hpp
src/config/: AppConfig.cpp  AppConfig.hpp  DefaultPrompt.hpp  PromptProvider.cpp  PromptProvider.hpp
src/markdown/: Markdown.cpp  Markdown.hpp
src/models/: Message.hpp
src/ollama/: OllamaClient.cpp  OllamaClient.hpp
src/session/: SessionStore.cpp  SessionStore.hpp
src/store/: MessageStore.cpp  MessageStore.hpp
src/tool/: Permission.hpp  ToolFormat.cpp  ToolFormat.hpp  ToolManager.cpp  ToolManager.hpp  Tools.hpp
tests/: test_tool_manager.cpp
